tests/snapshots/cli_snapshots__root_help_output.snap
---
source: crates/ossus-cli/../../tests/cli_snapshots.rs
expression: "cli_output(&[\"--help\"])"
---
status: 0
stdout:
Ossus — local-first agent capability Registry and Resolver

USAGE:
    ossus <COMMAND>

BOOTSTRAP COMMANDS:
    help       Show this help
    version    Show the scaffold package version
    status     Show domain and implementation status
    plan       Show the implementation-plan entry point

REGISTRY COMMANDS:
    validate   Validate canonical manifest files
    registry   Inspect or rebuild the local metadata index
    search     Search canonical Registry metadata
    show       Show one indexed resource

PLANNED COMMAND GROUPS:
    init config scan resolve explain activate deactivate
    lock doctor eval audit research
stderr:
